Cacti CHANGELOG

0.8.7d
-bug#0001336: Allow to specify on_change handler for checkbox_group
-bug#0001338: When Using Web Basic Authentication HTML Bookmarks Do Not Work 
-bug#0001388: Spine uses illegal flag for ping on Mac OS X 
-bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
-bug#0001361: SNMP query: 'No more variables left in this MIB View' instead of value of input field 
-bug#0001374: ss_host_disk.php etc. error corrected when using SNMP V3 (index off by 1)
-bug#0001376: graph_items.php variable $id defined in wrong place
-bug#0001377: Several bugs in new cli script "structured_rra_paths"
-bug#0001378: ping.pl script fails when using tcp:hostname    
-bug#0001382: cdef.php error due to wrong function name
-bug#0001383: syntax error in lib/rrd.php with PHP 4.4.4
-bug#0001384: utilities.php does not handle view_snmp_cache when host_id = -1 (Any)
-bug#0001385: LDAP Error: Group DN could not be found
-bug#0001391: parsing snmp string with "=" ?? --> WARNING: Result from SNMP not valid
-bug#0001392: Problem on CDEF function ALL|SIMILAR_DATA_SOURCES_(NO)?DUPS 
-bug#0001394: Error of variable in lib/html_tree.php 
-bug#0001398: Cross site scripting checking is overly protective on search filters
-bug#0001400: LDAP authentication results in PHP warning message
-bug: Resolved issue with reapply suggested names not working for data sources under certain conditions
-bug: Correct missing db_conn argument issue
-bug: Deleting large number of hosts results in SQL errors due to MySQL buffer overrun
-feature: SNMP cli version information added to tech support page

0.8.7c
-bug#0000157: Dual pane tree does not have the option of not rendering all trees in one page 
-bug#0000486: RRA template edit allows invalid XFF values
-bug#0000626: Setting "Default Graph Tree" does not work with dual pane view
-bug#0000828: Truncated IOS description in |query_ifAlias|